Update before submit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<meta charset="utf-8"/>
 	<link href="style.css" rel="stylesheet">
 	<link href="menu.css" rel="stylesheet">
 </head>
@@ -107,7 +108,7 @@
 							<div>Credits</div>
 							<ul>
 								<li><a href="https://twitter.com/NoNiMad" target="blank" class="inline">NoNiMad</a> : Code</li>
-								<li>ZauvalM : Main menu</li>
+								<li><a href="https://twitter.com/ZauvalM" target="blank" class="inline">ZauvalM</a> : Main menu</li>
 								<li>Erallya : Writing</li>
 								<li>All of us : Ideas</li>
 							</ul>
