color theme selector

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 						</li>
 						<li><a data-target-panel="MENU" href="#">Main menu</a></li>
 						<li><a data-target-panel="STORY" href="#">Welcome / Instructions</a></li>
+						<li><a data-target-panel="THEME" href="#">Theme selection</a></li>
 					</ul>
 					<ul>
 						<li><a href="https://github.com/NoNiMad/OutOfMemory" target="blank" class="inline">Source code (GitHub ⭧)</a></li></li>
@@ -194,6 +195,21 @@
 				</div>
 			</div>
 		</div>
+
+		<div id="theme" class="panel">
+			<div class="columns">
+				<div class="col col-large">
+					<div class="h1 center">
+						<a class="previous-panel" data-target-panel="HOME" href="#">←</a>
+						/Themes
+					</div>
+					<ul id="theme-list"></ul>
+				</div>
+				<div class="col col-small">
+				</div>
+			</div>
+		</div>
+
 	</div>
 
 	<script src="constants.js"></script>
@@ -201,5 +217,6 @@
 	<script src="utils.js"></script>
 	<script src="files.js"></script>
 	<script src="upgrades.js"></script>
+	<script src="theme.js"></script>
 	<script src="game.js"></script>
 </body>
